# deberta.cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  setup_model.sh
pytorch/: deberta.py
src/: CMakeLists.txt  convert.py  deberta.cpp  deberta.h  main.cpp
